fixewd z-index for dropdown

--- a/project/frontend/src/components/filter/Filter.module.css
+++ b/project/frontend/src/components/filter/Filter.module.css
@@ -1,135 +1,21 @@
-.filter {
+.sliderFilterBox {
   position: fixed;
-  left: 0rem;
+  left: 4rem;
   top: 5rem;
-  background-color: rgb(245, 245, 245);
-  border-bottom-right-radius: 1rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding-right: 0.3rem;
-  padding-top: 5rem;
-  width: 25rem;
+  bottom: 10%;
+  max-width: 30%;
 }
-.filter h1,
-h2 {
-  margin-top: 0;
-}
-.filter ul {
-  list-style: none;
-}
-
-.headerContainer {
+.sliderBox {
   display: flex;
-  padding-left: 3rem;
-  padding-right: 2rem;
-  padding-top: 0rem;
-  padding-bottom: 2rem;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px;
-  border-style: solid;
-  border-color: lightgray;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 1rem;
+  justify-content: left;
+  justify-items: center;
+  align-items: center;
 }
-.headerContainer h1{
-  padding-left: 2rem;
-}
-
-.generalContainer {
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px;
-  border-style: solid;
-  border-color: lightgray;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
-  padding-bottom: 2rem;
-}
-.generalHeaderContainer {
-  margin-top: 0.5rem;
-  margin-left: 1rem;
-}
-
-.generalList ul,
-.programmingLanguageList ul {
-  padding-left: 1.5rem;
-}
-
-.generalListItem {
-  margin: 0.5rem;
-}
-.checkbox {
-  height: 1.5rem;
-  width: 1.5rem;
-}
-
-.generalFilter {
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px;
-  border-style: solid;
-  border-color: lightgray;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
-  padding-bottom: 2rem;
-}
-
-.label {
-  font-size: 1.5rem;
-  margin-left: 1rem;
+.featureSlider1,
+.featureSlider2,
+.featureSlider3 {
   margin-bottom: 2rem;
-}
-
-.programmingLanguageContainer {
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px;
-  border-style: solid;
-  border-color: lightgray;
-  padding-bottom: 2rem;
-}
-
-.programmingLanguageHeaderContainer {
-  margin-top: 0.5rem;
-  margin-left: 1rem;
-}
-
-.rangeSliderContainer {
-  position: fixed;
-  left: 0;
-  bottom: 23rem;
-}
-
-.sliderBox{
-  position: fixed;
-  left: 26rem;
-  top: 6rem;
-  display: flex;
-  flex-direction: column;
-}
-.featureSlider1,.featureSlider2,.featureSlider3{
-  margin-bottom: 2rem;
-}
-
-.radarChart{
-  background-color: white;
-  border-radius: 2rem;
-  padding: 1rem;
-  position: fixed;
-  left: 28rem;
-  width: 40rem;
-  z-index: 1;
-  opacity: 0.4;
-}
-.pieChartContainer{
-  width: 30rem;
-  height: 30rem;
-  position: fixed;
-  bottom: 47rem;
-  background-color: white;
-  border-radius: 2rem;
-  left: 33rem;
-  opacity: 1;
-  z-index: 0;
 }
