--- a/project/frontend/src/components/layout/NavItem.module.css
+++ b/project/frontend/src/components/layout/NavItem.module.css
@@ -1,30 +1,30 @@
-
-.navItem{
-    --nav-size: 2rem;
-    width: calc(var(--nav-size)*0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.navItem {
+  --nav-size: 2rem;
+  width: calc(var(--nav-size) * 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.iconButton{
-    --button-size: calc(var(var(--nav-size)*0.5));
-    width: var(--button-size);
-    height: var(--button-size);
-    background-color: gray;
-    border-radius: 50%;
-    padding: 5px;
-    margin: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: filter 300ms;
+.iconButton {
+  --button-size: calc(var(var(--nav-size) * 0.5));
+  width: var(--button-size);
+  height: var(--button-size);
+  background-color: white;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 300ms;
+  border: 1px solid black;
 }
-.iconButton:hover{
-    filter: brightness(1.2);
+.iconButton:hover {
+  filter: brightness(1.2);
 }
-.iconButton svg{
-    fill: white;
-    width: 24px;
-    height: 24px;
+.iconButton svg {
+  fill: black;
+  width: 24px;
+  height: 24px;
 }
